--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -1,4 +1,5 @@
 $navbar-blue: #337ab7;
 $navbar-gray: #e7e7e7;
+$panel-rose: rgba(228, 137, 137, 0.8);
 $white: #FFF;
 $table_background: rgb(246, 218, 218);
