--- a/app/views/expense_lists/new.js.erb
+++ b/app/views/expense_lists/new.js.erb
@@ -1,7 +1,11 @@
-var form_field = $('.expense_lists_form');
-form_field.html("<%= j render 'form'%>")
-form_field.slideToggle(200);
+var form = "<%= j render 'form' %>";
+var expenseLists = $('#expense-lists');
+var createButton = $('.create-expense-list-button');
+
+expenseLists.append(form).fadeIn(200);
+createButton.hide();
 
 form_field.on('click', '.back-link', function(){
   form_field.slideUp(200);
+  createButton.show();
 });
