--- a/app/assets/stylesheets/expense_lists.scss
+++ b/app/assets/stylesheets/expense_lists.scss
@@ -2,18 +2,18 @@
 
 // PANELS
 .panel-group .panel {
-    margin-bottom: 15px;
-    border-radius: 4px;
-    padding-left: 0px;
-    &:hover {
-      border-color: lighten($panel-rose, 20);
-      .panel-heading {
-        background-color: lighten($panel-rose, 20);
-      }
-      .panel-footer {
-        background-color: lighten($panel-rose, 20);
-      }
+  margin-bottom: 15px;
+  border-radius: 4px;
+  padding-left: 0px;
+  &:hover {
+    border-color: lighten($panel-rose, 20);
+    .panel-heading {
+      background-color: lighten($panel-rose, 20);
     }
+    .panel-footer {
+      background-color: lighten($panel-rose, 20);
+    }
+  }
 }
 
 .panel-heading {
@@ -49,9 +49,16 @@
 }
 
 // FORM
-.expense_lists_form {
-  padding-top: 15px;
-  display: none;
+#expense_list_form_panel {
+  .panel {
+    margin-bottom: 15px;
+    border-radius: 4px;
+    padding-left: 0px;
+    border-color: rgb(54, 128, 133);
+    &:hover {
+      cursor: none;
+    }
+  }
 }
 
 // TABLE
