Finish expense views and fix expense list edit issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,7 @@
 @import 'colors';
 @import 'expense_lists';
 @import 'navbar';
+@import 'expenses';
 
 .glyph-button {
     -webkit-appearance: none;
