--- a/app/views/expenses/_form.html.haml
+++ b/app/views/expenses/_form.html.haml
@@ -35,4 +35,4 @@
 
   .row
     .col-xs-12
-      = f.submit 'Submit', remote: true, class: 'btn btn-primary btn-success'
+      = f.submit 'Submit', class: 'btn btn-primary btn-success'
