--- a/app/assets/stylesheets/expenses.scss
+++ b/app/assets/stylesheets/expenses.scss
@@ -1,3 +1,4 @@
-// Place all the styles related to the expenses controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.create_new_expense_button {
+  font-size: 18px;
+}
