--- a/app/views/expense_lists/_user_stats_modal.haml
+++ b/app/views/expense_lists/_user_stats_modal.haml
@@ -6,21 +6,21 @@
           %span{'aria-hidden' => "true"}close
         .h4.modal-title
           User expenses stats for
-          = expense_list.name
+          = @expense_list.name
         .modal-body
           %p
             The following table lists the sums of expenses by user
-            %small= "(#{simple_date(expense_list.created_at)} - #{simple_date(Date.today)})"
+            %small= "(#{simple_date(@expense_list.created_at)} - #{simple_date(Date.today)})"
           %table.table.table-striped.table-bordered.table-condensed.user-stats-table{cellspacing: "0"}
             %thead.month-row
               %tr
                 %th Who
                 %th Total
             %tbody
-              - expense_list.expenses_in_list_by_user.map do |user, expenses|
+              - @expense_list.expenses_in_list_by_user.map do |user, expenses|
                 %tr
                   %td= User.find(user).name
                   %td= "#{expenses.map(&:expenses_in_euro).reduce(&:+)}€"
               %tr.monthly-totals-row
                 %td Sum
-                %td= "#{expense_list.total_expenses_in_list}€"
+                %td= "#{@expense_list.total_expenses_in_list}€"
