--- a/app/views/expenses/_expense_form_modal.html.haml
+++ b/app/views/expenses/_expense_form_modal.html.haml
@@ -1,4 +1,4 @@
-.modal.fade#new_expense_modal{ tabindex: '-1'}
+.modal.fade#expense_form_modal{ tabindex: '-1'}
   .modal-dialog{ role: 'document' }
     .modal-content
       .modal-header
