--- a/app/views/todo_lists/index.html.haml
+++ b/app/views/todo_lists/index.html.haml
@@ -1,23 +1,9 @@
-%h1 Listing todo_lists
-
-%table
-  %thead
-    %tr
-      %th Name
-      %th Description
-      %th
-      %th
-      %th
-
-  %tbody
-    - @todo_lists.each do |todo_list|
-      %tr
-        %td= todo_list.name
-        %td= todo_list.description
-        %td= link_to 'Show', todo_list
-        %td= link_to 'Edit', edit_todo_list_path(todo_list)
-        %td= link_to 'Destroy', todo_list, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
-= link_to 'New Todo list', new_todo_list_path
+.container-fluid
+  .row
+    .panel-group{ id: 'expense-lists' }
+      - if @todo_lists.any?
+        = render @todo_lists
+      - else
+        %p There is no todo list yet...
+  .row.center
+    = link_to 'Create new todo list', new_todo_list_path, remote: true, class: 'btn btn-default btn-primary btn-success create-todo-list-button'
