Add open todo count to todo_list panels

--- a/app/views/todo_lists/_todo_list.html.haml
+++ b/app/views/todo_lists/_todo_list.html.haml
@@ -21,4 +21,5 @@
           No description supplied, add one
           =link_to 'here', edit_todo_list_path(todo_list)
     .panel-footer
-      Amount of open tasks
+      Open todos:
+      = "#{todo_list.open_todos.count} / #{todo_list.todos.count}"
