--- a/app/views/expenses/_form.html.haml
+++ b/app/views/expenses/_form.html.haml
@@ -1,27 +1,19 @@
 = form_for([@expense_list, @expense]) do |f|
-  %fieldset{class: "form-group row #{"has-error" if f.object.errors.include?(:where)}"}
+  %fieldset{class: "form-group row"}
     .col-xs-12
       = f.text_field :where, {class: 'form-control', placeholder: 'Shopping location'}
-      %span.help-block
-        = f.object.errors[:where].join(', ')
 
-  %fieldset{class: "form-group row #{"has-error" if f.object.errors.include?(:expenses_in_euro)}"}
+  %fieldset{class: "form-group row"}
     .col-xs-12
       = f.text_field :expenses_in_euro, {class: 'form-control', placeholder: '23.45'}
-      %span.help-block
-        = f.object.errors[:expenses_in_euro].join(', ')
 
-  %fieldset{class: "form-group row #{"has-error" if f.object.errors.include?(:expense_date)}"}
+  %fieldset{class: "form-group row"}
     .col-xs-12
-      = f.text_field :expense_date, {class: 'form-control', placeholder: '23.04.2016' }
-      %span.help-block
-        = f.object.errors[:expense_date].join(', ')
+      = f.date_field :expense_date, {class: 'form-control', value: Date.today }
 
-  %fieldset{class: "form-group row #{"has-error" if f.object.errors.include?(:comment)}"}
+  %fieldset{class: "form-group row"}
     .col-xs-12
       = f.text_area :comment, {class: 'form-control', placeholder: "Comment, e.g. 'Bought lot's of coffee..."}
-      %span.help-block
-        = f.object.errors[:comment].join(', ')
 
   %fieldset{class: "form-group"}
     .col-xs-12
