--- a/app/assets/stylesheets/expense_lists.scss
+++ b/app/assets/stylesheets/expense_lists.scss
@@ -102,6 +102,18 @@
   border-collapse: separate;
   border-spacing: 0 20px;
   border-style: none;
+  &.description {
+    text-align: right;
+  }
+}
+
+tr {
+  &.positive {
+    background-color: rgba(85, 170, 50, 0.56);
+  }
+  &.negative {
+    background-color: rgba(255, 161, 161, 0.56);
+  }
 }
 
 .spacer-row {
@@ -114,11 +126,6 @@
   // border: 2px dashed rgb(246, 218, 218);
   background-color: lighten($table_background, 5);;
 }
-
-.table_placeholder {
-  padding: 5px;
-}
-
 
 .user-stats-table {
   margin-top: 10px;
