--- a/app/views/expense_lists/_expenses_in_list.html.haml
+++ b/app/views/expense_lists/_expenses_in_list.html.haml
@@ -14,18 +14,20 @@
       - expenses.each do |expense|
         = render partial: 'expenses/expense', locals: { expense: expense, expense_list: @expense_list }
 
+      %tr.spacer-row
+        %td{ colspan: '5'}
       %tr
         %td.monthly-totals-row.description{ colspan: '4'}
           Total expenses in month
-        %td.monthly-totals-row#sum_of_expenses_in_month
+        %td.monthly-totals-row.value#sum_of_expenses_in_month
           = "#{expense_list.sum_of_expenses_in_month(month, year)}€"
         %td.monthly-totals-row{ colspan: '1'}
       - if expense_list.budget_in_euro
         - balance = continous_account_balance_for(expense_list, month, year)
         %tr
           %td.monthly-totals-row.description{ colspan: '4'}
-            Money left in month
+            Money left in account
           %td.monthly-totals-row.euros_left_in_month
-            %span.euros_left_in_month_value
+            %span.value
               = balance.to_s + "€"
           %td.monthly-totals-row{ colspan: '4'}
