--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -1,4 +1,4 @@
-%tr{ class: "#{expense.expenses_in_euro < 0 ? 'negative' : 'positive'}" }
+%tr{ class: "bg-#{expense.expenses_in_euro < 0 ? 'danger' : 'success'}" }
   %td{class: 'col-md-1'}
     = link_to edit_expense_list_expense_path(expense_list, expense), remote: true, data: { toggle: 'modal', target: '#expense_form_modal' } do
       %span.btn.btn-default.btn-xs.glyphicon.glyphicon-pencil.glyph-button
@@ -7,7 +7,7 @@
       %span.btn.btn-default.btn-xs.glyphicon.glyphicon-trash.glyph-button
     = link_to '', data: { toggle: 'modal', target: "#modal-#{expense.id}" } do
       %span.btn.btn-default.btn-xs.glyphicon.glyphicon-search.glyph-button'
-    = render partial: 'expenses/expense_comment_modal', locals: {expense: expense}
+    = render partial: 'expenses/expense_comments_modal', locals: {expense: expense}
   %td= expense.expense_date.strftime("%d.%m")
   %td= expense.where
   %td= expense.user && expense.user.name || '???'
