--- a/app/assets/stylesheets/expense_lists.scss
+++ b/app/assets/stylesheets/expense_lists.scss
@@ -89,6 +89,10 @@
 }
 
 // TABLE
+#expenses_in_list {
+  padding-right: 45px;
+}
+
 .month-row {
   background-color: darken($navbar-gray, 5);
   td {
@@ -132,4 +136,19 @@ tr {
 
 .user-stats-table {
   margin-top: 10px;
+}
+
+#scroll-to-top {
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display:none;
+}
+
+#scroll-to-bottom {
+    cursor: pointer;
+    position: fixed;
+    top: 80px;
+    right: 20px;
 }
